Adding admin GET service and Items ping
