# admin/api/pkg/admin/response.go
@@ -3,3 +3,8 @@ package admin
 type ListServicesResponse struct {
 	Services []Service
 }
+
+type GetServiceResponse struct {
+	Service              Service
+	DockerAdditionalInfo DockerAdditionalInfo
+}
