# admin/api/pkg/transport/http/handlers.go
@@ -14,6 +14,7 @@ import (
 
 type AdminService interface {
 	ListServices(ctx context.Context) ([]admin.Service, apierrors.APIError)
+	GetService(ctx context.Context, id string) (admin.Service, admin.DockerAdditionalInfo, apierrors.APIError)
 }
 
 // DocsHandler sets up the Docs request handler
@@ -25,7 +26,7 @@ func DocsHandler(logger *logger.Logger) gin.HandlerFunc {
 // ListServicesHandler sets up the ListServices request handler
 // ListItems godoc
 //	@Summary		Return the list of current services.
-//	@Description	Return the services information fetching information from the configuration.
+//	@Description	Return the services information fetching information from the configuration and Docker.
 //	@Tags			Admin
 //	@Produce		json
 //	@Success		200	{object}	ListServicesResponseHTTP
@@ -46,6 +47,45 @@ func ListServicesHandler(ctx context.Context, adminService AdminService, logger 
 		}
 
 		httpResponse := ListServicesResponseToHTTP(response)
+		ctx.JSON(http.StatusOK, httpResponse)
+	}
+}
+
+// GetServiceHandler sets up the GetService request handler
+// GetService godoc
+//	@Summary		Return the service information.
+//	@Description	Return the service information fetching information from the configuration and Docker.
+//	@Tags			Admin
+//	@Param			serviceID	path	string	true	"ID of the service to get"
+//	@Produce		json
+//	@Success		200	{object}	GetServiceResponseHTTP
+//	@Failure		404	{object}	APIErrorHTTP
+//	@Failure		500	{object}	APIErrorHTTP
+//	@Router			/services/{serviceID} [get]
+func GetServiceHandler(ctx context.Context, adminService AdminService, logger *logger.Logger) gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		request, err := HTTPToGetServiceRequest(ctx)
+		if err != nil {
+			apiErr := apierrors.NewBadRequestError(err.Error())
+			logger.Errorf(ctx, "Error generating GetServiceRequest: %s", apiErr.Error())
+			httpResponse := APIErrorToHTTP(apiErr)
+			ctx.JSON(apiErr.Status(), httpResponse)
+			return
+		}
+		service, additionalInfo, apiErr := adminService.GetService(ctx, request.ID)
+		if apiErr != nil {
+			logger.Errorf(ctx, "Error getting service: %s", apiErr.Error())
+			httpResponse := APIErrorToHTTP(apiErr)
+			ctx.JSON(apiErr.Status(), httpResponse)
+			return
+		}
+
+		response := admin.GetServiceResponse{
+			Service:              service,
+			DockerAdditionalInfo: additionalInfo,
+		}
+
+		httpResponse := GetServiceResponseToHTTP(response)
 		ctx.JSON(http.StatusOK, httpResponse)
 	}
 }
