# admin/api/pkg/transport/http/paths.go
@@ -1,6 +1,13 @@
 package http
 
+import "fmt"
+
+const (
+	paramServiceID = "serviceID"
+)
+
 var (
 	PathDocs         = "/docs/*any"
 	PathListServices = "/services"
+	PathGetService   = fmt.Sprintf("/services/:%s", paramServiceID)
 )
